More starter web stuff
also baitman lol

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Home</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body class='dark-theme'>
+<body class="dark-theme">
     <h1>Home</h1>
-    <p id="msg">To Do:</p>
+    <h2>To Do:</h2>
+<div class="to-do">
     <ul>
         <li>visual styles</li>
         <li>create light and dark themes</li>
         <li>Enable switching theme</li>
     </ul>
-    <div>
-        <button class="btn">Light</button>
-    </div>
+</div>
+<div>
+        <button class="theme-switch">Light</button>
+</div>
     <script src="app.js"></script>
     <noscript>JavaScript is disabled in your browser. Please enable it to view the content.</noscript>
 </body>
