--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="dark-theme">
-<div id="header">
-    <div id="header-items">
-        <a href="/" class="header-item"><img src="/baitman.png" alt="logo" id="logo"></a>
-        <button class="header-item" id="theme-toggle">Light</button>
-    </div>
-    <div id="header-bg-img"></div>
+<div>
+    <button id="theme-toggle">Light</button>
 </div>
 <div id="menu">
     <div id="menu-items">
@@ -22,7 +18,6 @@
         <a data-value="ABOUT" href="/" class="menu-item">ABOUT</a>
         <a data-value="CONTACT" href="/" class="menu-item">CONTACT</a>
     </div>
-    <div id="menu-bg-img"></div>
 </div>
     <script src="app.js"></script>
     <noscript>JavaScript is disabled in your browser. Please enable it to view the content.</noscript>
